2004-1-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl5-cvs-b1

	* Fix: Correct unsanitized user-input

2004-11-03  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl4

	* 1.4.4-pl4 release

2004-11-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl4-cvs-b2

	* Fix: Adding $GLOBALS to the scrubList turned out to be...
	  paranoia, basically.  GLOBALS is always a recursive array, and
	  always ended up being scrubbed.

2004-11-03  Jens A. Tkotz <jens@peino.de>  1.4.4-pl4-cvs-b1

	* Fix: $photo was defined twice in view_photo.php.
	       Second time it was relying on $GLOBALS and failed.

2004-11-02  Chris Kelly <ckdake@users.sf.net> 1.4.4-pl3

	* 1.4.4-pl3 release 

2004-10-28  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl3-cvs-b2

	* Fix: Add GLOBALS to sensitiveList

2004-10-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl3-cvs-b1

	* Fix: Security-related changes

2004-08-25  Chris Kelly <ckdake@users.sf.net> 1.4.4-pl2

	* 1.4.4-pl2 release

2004-08-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl2-cvs-b5

	* Fix: Also _SERVER["HTTP_COOKIE"] in phpinfo.

2004-08-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl2-cvs-b4

	* Fix: Unset GRPC in phpinfo.php so that people don't accidentally post
	  confidential information to the forums

2004-08-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl2-cvs-b3

	* Fix: Completion of the new long filename fix (variable name typo in b1)

2004-08-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl2-cvs-b2

	* Fix: Incomplete merge of _GetStyleSheetLink caused failure to recognize
	  non-.default filenames.

2004-08-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl2-cvs-b1

	* Fix:  The longfilename / disclosure issue was completely broken in
	  way too many ways.

2004-08-20  Chris Kelly <ckdake@users.sf.net> 1.4.4-pl1

	* 1.4.4-pl1 release

2004-08-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b18
