@@ -294,6 +294,8 @@ class AlbumDB {
 	}
 
 	function numAccessibleItems($user) {
+		global $gallery;
+
 		$numPhotos = $numAlbums = $numTopAlbums = 0;
 		foreach ($this->albumList as $album) {
 			if ($user->canReadAlbum($album)) {
