@@ -30,7 +30,7 @@ require(dirname(__FILE__) . '/init.php');
  * to ensure security.  Don't check for http:// or https:// because
  * for all we know, someone put their album URL on a gopher server...
  */
-if ($return[0] != '/' && strstr($return, '://') !== false) {
+if (isset($return) && $return[0] != '/' && strstr($return, '://') !== false) {
     if (strncmp($return, $gallery->app->photoAlbumURL, strlen($gallery->app->photoAlbumURL) != 0) &&
             strncmp($return, $gallery->app->albumDirURL, strlen($gallery->app->albumDirURL) != 0)) {
         die(_('Attempted security breach.'));
