@@ -1,3 +1,10 @@
+2004-1-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl5-cvs-b2
+
+	* Fix: ImageMagick 6.0 auto-detection
+
+	* Fix: missing "global $gallery;" in AlbumDB could cause warning messages
+	  on PHP5
+
 2004-1-24  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl5-cvs-b1
 
 	* Fix: Correct unsanitized user-input
